--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorGreyLight">#f0f0f0</color>
+    <color name="colorGreyNormal">#818181</color>
+    <color name="colorGreyDark">#3c3c3c</color>
 </resources>
