--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="padding_normal">16dp</dimen>
+    <dimen name="icon_normal">24dp</dimen>
+    <dimen name="icon_big">48dp</dimen>
     <dimen name="padding_small">8dp</dimen>
-    <dimen name="text_normal">16sp</dimen>
+    <dimen name="padding_normal">16dp</dimen>
+    <dimen name="padding_big">24dp</dimen>
     <dimen name="text_title">24sp</dimen>
+    <dimen name="text_normal">16sp</dimen>
 </resources>
